k8s/UCLHC/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uclhc-service
  namespace: osg-frontends
spec:
  selector:
    k8s-app: uclhc-frontend
  type: ClusterIP
  ports:
  - name: web
    port: 80
    targetPort: 80
    protocol: TCP
