k8s/UCLHC/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: uclhc-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: ""
  namespace: osg-frontends
spec:
  rules:
  - host: uclhc-frontend.nautilus.optiputer.net
    http:
      paths:
      - backend:
          serviceName: uclhc-service
          servicePort: 80
